--- a/05-spring-boot-spring-mvc-security--id-and-roles/src/main/resources/templates/home.html
+++ b/05-spring-boot-spring-mvc-security--id-and-roles/src/main/resources/templates/home.html
@@ -3,15 +3,15 @@
                 xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Luv2code Company Home Page</title>
+    <title>Company Home Page</title>
 </head>
 
 <body>
 
-    <h2>Luv2code Company Home Page</h2>
+    <h2>Company Home Page</h2>
     <hr>
     <p>
-      Welcome to the luv2code company home page!
+      Welcome to the Akentech company home page!
     </p>
     <hr>
     <!-- Display username and role-->
